--- a/app/index.html
+++ b/app/index.html
@@ -32,13 +32,26 @@
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
 
     {{content-for "head-footer"}}
-  </head>
-  <body>
+
+    </head>
+    <body>
+    
     {{content-for "body"}}
 
     <script src="assets/vendor.js"></script>
     <script src="assets/embermeetup.js"></script>
 
     {{content-for "body-footer"}}
+    
+    <script>
+    (function(d) {
+      var config = {
+        kitId: 'awy1xjh',
+        scriptTimeout: 3000,
+        async: true
+      },
+      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+    })(document);
+  </script>
   </body>
 </html>
